<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hassan.nbagamereminder.MainActivity">



    <TextView
        android:id="@+id/helloTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloTV"
        android:layout_weight="1"/>




    <RadioGroup
        android:id="@+id/conferenceRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/helloTV"
        android:paddingTop="20dp"
        >

        <RadioButton
            android:id="@+id/easternRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easternRadioBtn"
            android:checked="true" />

        <RadioButton
            android:id="@+id/westernRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/westernRadioBtn" />

    </RadioGroup>


    <Button
        android:id="@+id/set_game_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setReminderBtn"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_action_calendar_day"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/conference_nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEST Conference Standing"
        android:paddingTop="30dp"
        android:gravity="center"
        android:layout_below="@+id/conferenceRadioGroup"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/standings_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conference_nameTV"
        android:dividerHeight="1dp"
        android:padding="10dp"
        android:layout_marginTop="10dp">

    </ListView>






</RelativeLayout>
