<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_games_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hassan.nbagamereminder.GamesScheduleActivity">



    <Button
        android:id="@+id/filterByTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterByTeamBtn"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_marginBottom="10dp"/>


    <Button
        android:id="@+id/deleteFilterBtn"
        android:text="@string/removeFilterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <TextView
        android:id="@+id/instructionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionTV"
        android:layout_below="@id/filterByTeamBtn"
        />

    <ListView
        android:id="@+id/upcomingGames_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructionTV"
        android:dividerHeight="3dp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        >
    </ListView>



</RelativeLayout>


<!--

    -->